@@ -7,10 +7,14 @@
  */
 package io.camunda.operate.webapp.elasticsearch.reader;
 
-import static io.camunda.operate.store.elasticsearch.ElasticsearchIncidentStore.ACTIVE_INCIDENT_QUERY;
+import static io.camunda.operate.store.elasticsearch.ElasticsearchIncidentStore.ACTIVE_INCIDENT_QUERY_ES8;
+import static io.camunda.operate.util.ElasticsearchUtil.QueryType.ALL;
+import static io.camunda.operate.util.ElasticsearchUtil.QueryType.ONLY_RUNTIME;
 import static io.camunda.operate.util.ElasticsearchUtil.TERMS_AGG_SIZE;
-import static io.camunda.operate.util.ElasticsearchUtil.fromSearchHit;
 import static io.camunda.operate.util.ElasticsearchUtil.joinWithAnd;
+import static io.camunda.operate.util.ElasticsearchUtil.searchAfterToFieldValues;
+import static io.camunda.operate.util.ElasticsearchUtil.termsQuery;
+import static io.camunda.operate.util.ElasticsearchUtil.whereToSearch;
 import static io.camunda.operate.webapp.rest.dto.incidents.IncidentDto.FALLBACK_PROCESS_DEFINITION_NAME;
 import static io.camunda.webapps.schema.descriptors.index.DecisionIndex.DECISION_ID;
 import static io.camunda.webapps.schema.descriptors.template.DecisionInstanceTemplate.DECISION_NAME;
@@ -29,12 +33,19 @@ import static io.camunda.webapps.schema.descriptors.template.FlowNodeInstanceTem
 import static io.camunda.webapps.schema.entities.flownode.FlowNodeState.ACTIVE;
 import static io.camunda.webapps.schema.entities.flownode.FlowNodeState.COMPLETED;
 import static io.camunda.webapps.schema.entities.flownode.FlowNodeState.TERMINATED;
-import static org.elasticsearch.index.query.QueryBuilders.*;
-import static org.elasticsearch.search.aggregations.AggregationBuilders.filter;
-import static org.elasticsearch.search.aggregations.AggregationBuilders.terms;
-import static org.elasticsearch.search.aggregations.AggregationBuilders.topHits;
 
+import co.elastic.clients.elasticsearch._types.FieldValue;
+import co.elastic.clients.elasticsearch._types.SortOrder;
+import co.elastic.clients.elasticsearch._types.aggregations.Aggregate;
+import co.elastic.clients.elasticsearch._types.aggregations.Aggregation;
+import co.elastic.clients.elasticsearch._types.aggregations.Buckets;
+import co.elastic.clients.elasticsearch._types.aggregations.LongTermsBucket;
+import co.elastic.clients.elasticsearch._types.aggregations.StringTermsBucket;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.search.Hit;
+import co.elastic.clients.util.NamedValue;
 import io.camunda.operate.cache.ProcessCache;
 import io.camunda.operate.conditions.ElasticsearchCondition;
 import io.camunda.operate.exceptions.OperateRuntimeException;
@@ -58,6 +69,7 @@ import io.camunda.webapps.operate.TreePath;
 import io.camunda.webapps.schema.descriptors.template.DecisionInstanceTemplate;
 import io.camunda.webapps.schema.descriptors.template.FlowNodeInstanceTemplate;
 import io.camunda.webapps.schema.descriptors.template.IncidentTemplate;
+import io.camunda.webapps.schema.entities.dmn.DecisionInstanceEntity;
 import io.camunda.webapps.schema.entities.dmn.DecisionInstanceState;
 import io.camunda.webapps.schema.entities.flownode.FlowNodeInstanceEntity;
 import io.camunda.webapps.schema.entities.flownode.FlowNodeState;
@@ -65,28 +77,8 @@ import io.camunda.webapps.schema.entities.flownode.FlowNodeType;
 import io.camunda.webapps.schema.entities.incident.IncidentEntity;
 import java.io.IOException;
 import java.util.*;
-import java.util.function.Consumer;
-import java.util.function.Function;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
-import org.elasticsearch.action.search.SearchRequest;
-import org.elasticsearch.action.search.SearchResponse;
-import org.elasticsearch.common.document.DocumentField;
-import org.elasticsearch.index.query.*;
-import org.elasticsearch.search.SearchHit;
-import org.elasticsearch.search.SearchHits;
-import org.elasticsearch.search.aggregations.AggregationBuilder;
-import org.elasticsearch.search.aggregations.AggregationBuilders;
-import org.elasticsearch.search.aggregations.Aggregations;
-import org.elasticsearch.search.aggregations.BucketOrder;
-import org.elasticsearch.search.aggregations.bucket.filter.Filter;
-import org.elasticsearch.search.aggregations.bucket.filter.Filters;
-import org.elasticsearch.search.aggregations.bucket.filter.FiltersAggregator;
-import org.elasticsearch.search.aggregations.bucket.terms.Terms;
-import org.elasticsearch.search.aggregations.bucket.terms.Terms.Bucket;
-import org.elasticsearch.search.aggregations.bucket.terms.TermsAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.TopHits;
-import org.elasticsearch.search.builder.SearchSourceBuilder;
-import org.elasticsearch.search.sort.SortOrder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -139,80 +131,87 @@ public class FlowNodeInstanceReader extends AbstractReader
   @Deprecated
   @Override
   public Map<String, FlowNodeStateDto> getFlowNodeStates(final String processInstanceId) {
-    final String latestFlowNodeAggName = "latestFlowNode";
-    final String activeFlowNodesAggName = "activeFlowNodes";
-    final String activeFlowNodesBucketsAggName = "activeFlowNodesBuckets";
-    final String finishedFlowNodesAggName = "finishedFlowNodes";
+    final var query =
+        ElasticsearchUtil.constantScoreQuery(termsQuery(PROCESS_INSTANCE_KEY, processInstanceId));
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
 
-    final ConstantScoreQueryBuilder query =
-        constantScoreQuery(termQuery(PROCESS_INSTANCE_KEY, processInstanceId));
+    // Build not completed flow nodes aggregation (ACTIVE or TERMINATED)
+    final var notCompletedFlowNodesAggs =
+        new Aggregation.Builder()
+            .filter(
+                f ->
+                    f.bool(
+                        b -> b.must(termsQuery(STATE, List.of(ACTIVE.name(), TERMINATED.name())))))
+            .aggregations(
+                ACTIVE_FLOW_NODES_BUCKETS_AGG_NAME,
+                new Aggregation.Builder()
+                    .terms(t -> t.field(FLOW_NODE_ID).size(TERMS_AGG_SIZE))
+                    .aggregations(
+                        LATEST_FLOW_NODE_AGG_NAME,
+                        new Aggregation.Builder()
+                            .topHits(
+                                th ->
+                                    th.sort(ElasticsearchUtil.sortOrder(START_DATE, SortOrder.Desc))
+                                        .size(1)
+                                        .source(s -> s.filter(sf -> sf.includes(STATE, TREE_PATH))))
+                            .build())
+                    .build())
+            .build();
 
-    final AggregationBuilder notCompletedFlowNodesAggs =
-        filter(activeFlowNodesAggName, termsQuery(STATE, ACTIVE.name(), TERMINATED.name()))
-            .subAggregation(
-                terms(activeFlowNodesBucketsAggName)
-                    .field(FLOW_NODE_ID)
-                    .size(TERMS_AGG_SIZE)
-                    .subAggregation(
-                        topHits(latestFlowNodeAggName)
-                            .sort(START_DATE, SortOrder.DESC)
-                            .size(1)
-                            .fetchSource(new String[] {STATE, TREE_PATH}, null)));
+    // Build finished flow nodes aggregation
+    final var finishedFlowNodesAggs =
+        new Aggregation.Builder()
+            .filter(f -> f.bool(b -> b.must(termsQuery(STATE, COMPLETED.name()))))
+            .aggregations(
+                FINISHED_FLOW_NODES_BUCKETS_AGG_NAME,
+                new Aggregation.Builder()
+                    .terms(t -> t.field(FLOW_NODE_ID).size(TERMS_AGG_SIZE))
+                    .build())
+            .build();
 
-    final AggregationBuilder finishedFlowNodesAggs =
-        filter(finishedFlowNodesAggName, termQuery(STATE, COMPLETED))
-            .subAggregation(
-                terms(FINISHED_FLOW_NODES_BUCKETS_AGG_NAME)
-                    .field(FLOW_NODE_ID)
-                    .size(TERMS_AGG_SIZE));
+    // Build incidents aggregation
+    final var incidentsAggs =
+        new Aggregation.Builder()
+            .filter(f -> f.bool(b -> b.must(termsQuery(INCIDENT, true))))
+            .aggregations(
+                AGG_INCIDENT_PATHS,
+                new Aggregation.Builder()
+                    .terms(t -> t.field(TREE_PATH).size(TERMS_AGG_SIZE))
+                    .build())
+            .build();
 
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(flowNodeInstanceTemplate)
-            .source(
-                new SearchSourceBuilder()
-                    .query(query)
-                    .aggregation(notCompletedFlowNodesAggs)
-                    .aggregation(getIncidentsAgg())
-                    .aggregation(finishedFlowNodesAggs)
-                    .size(0));
+    final var request =
+        new SearchRequest.Builder()
+            .index(whereToSearch(flowNodeInstanceTemplate, ALL))
+            .query(tenantAwareQuery)
+            .aggregations(ACTIVE_FLOW_NODES_AGG_NAME, notCompletedFlowNodesAggs)
+            .aggregations(AGG_INCIDENTS, incidentsAggs)
+            .aggregations(FINISHED_FLOW_NODES_AGG_NAME, finishedFlowNodesAggs)
+            .size(0)
+            .build();
+
     try {
-      final SearchResponse response = tenantAwareClient.search(request);
+      final var response = es8client.search(request, FlowNodeInstanceEntity.class);
 
       final Set<String> incidentPaths = new HashSet<>();
-      processAggregation(response.getAggregations(), incidentPaths, new Boolean[] {false});
+      processAggregation(response.aggregations(), incidentPaths, new AtomicBoolean());
 
       final Set<String> finishedFlowNodes =
-          collectFinishedFlowNodes(response.getAggregations().get(finishedFlowNodesAggName));
+          collectFinishedFlowNodes(response.aggregations().get(FINISHED_FLOW_NODES_AGG_NAME));
 
-      final Filter activeFlowNodesAgg = response.getAggregations().get(activeFlowNodesAggName);
-      final Terms flowNodesAgg =
-          activeFlowNodesAgg.getAggregations().get(activeFlowNodesBucketsAggName);
       final Map<String, FlowNodeStateDto> result = new HashMap<>();
-      if (flowNodesAgg != null) {
-        for (final Bucket flowNode : flowNodesAgg.getBuckets()) {
-          final Map<String, Object> lastFlowNodeFields =
-              ((TopHits) flowNode.getAggregations().get(latestFlowNodeAggName))
-                  .getHits()
-                  .getAt(0)
-                  .getSourceAsMap();
-          FlowNodeStateDto flowNodeState =
-              FlowNodeStateDto.valueOf(lastFlowNodeFields.get(STATE).toString());
-          if (flowNodeState.equals(FlowNodeStateDto.ACTIVE)
-              && incidentPaths.contains(lastFlowNodeFields.get(TREE_PATH))) {
-            flowNodeState = FlowNodeStateDto.INCIDENT;
-          }
-          result.put(flowNode.getKeyAsString(), flowNodeState);
-        }
-      }
+      collectActiveFlowNodeStates(
+          response.aggregations().get(ACTIVE_FLOW_NODES_AGG_NAME), incidentPaths, result);
+
       // add finished when needed
-      for (final String finishedFlowNodeId : finishedFlowNodes) {
+      for (final var finishedFlowNodeId : finishedFlowNodes) {
         if (result.get(finishedFlowNodeId) == null) {
           result.put(finishedFlowNodeId, FlowNodeStateDto.COMPLETED);
         }
       }
       return result;
     } catch (final IOException e) {
-      final String message =
+      final var message =
           String.format(
               "Exception occurred, while obtaining states for instance flow nodes: %s",
               e.getMessage());
@@ -223,35 +222,35 @@ public class FlowNodeInstanceReader extends AbstractReader
   @Override
   public List<Long> getFlowNodeInstanceKeysByIdAndStates(
       final Long processInstanceId, final String flowNodeId, final List<FlowNodeState> states) {
-    final List<Long> flowNodeInstanceKeys = new ArrayList<>();
     try {
-      final SearchRequest searchRequest =
-          new SearchRequest(flowNodeInstanceTemplate.getAlias())
-              .source(
-                  new SearchSourceBuilder()
-                      .query(
-                          boolQuery()
-                              .must(termQuery(FLOW_NODE_ID, flowNodeId))
-                              .must(termQuery(PROCESS_INSTANCE_KEY, processInstanceId))
-                              .must(
-                                  termsQuery(
-                                      STATE,
-                                      states.stream()
-                                          .map(Enum::name)
-                                          .collect(Collectors.toList()))))
-                      .fetchField(ID));
-      final SearchHits searchHits = tenantAwareClient.search(searchRequest).getHits();
+      final var stateNames = states.stream().map(Enum::name).toList();
+      final var query =
+          new BoolQuery.Builder()
+              .must(termsQuery(FLOW_NODE_ID, flowNodeId))
+              .must(termsQuery(PROCESS_INSTANCE_KEY, processInstanceId))
+              .must(termsQuery(STATE, stateNames))
+              .build()
+              ._toQuery();
+      final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
 
-      for (final SearchHit searchHit : searchHits) {
-        final Map<String, DocumentField> documentFields = searchHit.getDocumentFields();
-        flowNodeInstanceKeys.add(Long.parseLong(documentFields.get(ID).getValue()));
-      }
+      final var searchRequest =
+          new SearchRequest.Builder()
+              .index(flowNodeInstanceTemplate.getAlias())
+              .query(tenantAwareQuery)
+              .fields(f -> f.field(ID))
+              .source(s -> s.fetch(false))
+              .build();
+
+      final var response = es8client.search(searchRequest, FlowNodeInstanceEntity.class);
+
+      return response.hits().hits().stream()
+          .map(hit -> Long.parseLong(hit.fields().get(ID).to(List.class).get(0).toString()))
+          .toList();
     } catch (final IOException e) {
       throw new OperateRuntimeException(
           String.format("Could not retrieve flowNodeInstanceKey for flowNodeId %s ", flowNodeId),
           e);
     }
-    return flowNodeInstanceKeys;
   }
 
   @Override
@@ -262,13 +261,10 @@ public class FlowNodeInstanceReader extends AbstractReader
                 FlowNodeInstanceTemplate.PROCESS_INSTANCE_KEY, processInstanceKey));
 
     final var searchRequestBuilder =
-        new co.elastic.clients.elasticsearch.core.SearchRequest.Builder()
+        new SearchRequest.Builder()
             .index(ElasticsearchUtil.whereToSearch(flowNodeInstanceTemplate, QueryType.ALL))
             .query(query)
-            .sort(
-                ElasticsearchUtil.sortOrder(
-                    FlowNodeInstanceTemplate.POSITION,
-                    co.elastic.clients.elasticsearch._types.SortOrder.Asc));
+            .sort(ElasticsearchUtil.sortOrder(FlowNodeInstanceTemplate.POSITION, SortOrder.Asc));
 
     try {
       return ElasticsearchUtil.scrollAllStream(
@@ -343,48 +339,58 @@ public class FlowNodeInstanceReader extends AbstractReader
   private FlowNodeInstanceResponseDto queryFlowNodeInstances(
       final FlowNodeInstanceQueryDto flowNodeInstanceRequest, final String flowNodeInstanceId) {
 
-    final String processInstanceId = flowNodeInstanceRequest.getProcessInstanceId();
-    final String parentTreePath = flowNodeInstanceRequest.getTreePath();
-    final int level = parentTreePath.split("/").length;
+    final var processInstanceId = flowNodeInstanceRequest.getProcessInstanceId();
+    final var parentTreePath = flowNodeInstanceRequest.getTreePath();
+    final var level = parentTreePath.split("/").length;
 
-    IdsQueryBuilder idsQuery = null;
+    // Build base query
+    final var baseQuery =
+        ElasticsearchUtil.constantScoreQuery(termsQuery(PROCESS_INSTANCE_KEY, processInstanceId));
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(baseQuery);
+
+    // Build running parents aggregation
+    final var runningParentFilter =
+        new BoolQuery.Builder()
+            .must(termsQuery(LEVEL, level - 1))
+            .must(ElasticsearchUtil.prefixQuery(TREE_PATH, parentTreePath))
+            .mustNot(ElasticsearchUtil.existsQuery(END_DATE))
+            .build()
+            ._toQuery();
+
+    final var runningParentsAgg =
+        new Aggregation.Builder().filter(f -> f.bool(runningParentFilter.bool())).build();
+
+    // Build post filter
+    final var postFilterQueries = new java.util.ArrayList<Query>();
+    postFilterQueries.add(termsQuery(LEVEL, level));
+    postFilterQueries.add(ElasticsearchUtil.prefixQuery(TREE_PATH, parentTreePath));
+
     if (flowNodeInstanceId != null) {
-      idsQuery = idsQuery().addIds(flowNodeInstanceId);
+      postFilterQueries.add(ElasticsearchUtil.idsQuery(flowNodeInstanceId));
     }
 
-    final QueryBuilder query =
-        constantScoreQuery(termQuery(PROCESS_INSTANCE_KEY, processInstanceId));
+    final var postFilter = ElasticsearchUtil.joinWithAnd(postFilterQueries.toArray(new Query[0]));
 
-    final AggregationBuilder runningParentsAgg =
-        filter(
-            AGG_RUNNING_PARENT,
-            joinWithAnd(
-                boolQuery().mustNot(existsQuery(END_DATE)),
-                prefixQuery(TREE_PATH, parentTreePath),
-                termQuery(LEVEL, level - 1)));
-
-    final QueryBuilder postFilter =
-        joinWithAnd(termQuery(LEVEL, level), prefixQuery(TREE_PATH, parentTreePath), idsQuery);
-
-    final SearchSourceBuilder searchSourceBuilder =
-        new SearchSourceBuilder()
-            .query(query)
-            .aggregation(runningParentsAgg)
+    // Build search request
+    final var searchRequestBuilder =
+        new SearchRequest.Builder()
+            .index(whereToSearch(flowNodeInstanceTemplate, ALL))
+            .query(tenantAwareQuery)
+            .aggregations(AGG_RUNNING_PARENT, runningParentsAgg)
             .postFilter(postFilter);
+
     if (flowNodeInstanceRequest.getPageSize() != null) {
-      searchSourceBuilder.size(flowNodeInstanceRequest.getPageSize());
+      searchRequestBuilder.size(flowNodeInstanceRequest.getPageSize());
     }
 
-    applySorting(searchSourceBuilder, flowNodeInstanceRequest);
+    applySorting(searchRequestBuilder, flowNodeInstanceRequest);
 
-    final SearchRequest searchRequest =
-        ElasticsearchUtil.createSearchRequest(flowNodeInstanceTemplate).source(searchSourceBuilder);
     try {
       final FlowNodeInstanceResponseDto response;
       if (flowNodeInstanceRequest.getPageSize() != null) {
-        response = getOnePage(searchRequest, processInstanceId);
+        response = getOnePage(searchRequestBuilder.build(), processInstanceId);
       } else {
-        response = scrollAllSearchHits(searchRequest, processInstanceId);
+        response = scrollAllSearchHits(searchRequestBuilder, processInstanceId);
       }
       // for process instance level, we don't return running flag
       if (level == 1) {
@@ -392,69 +398,16 @@ public class FlowNodeInstanceReader extends AbstractReader
       }
       if (flowNodeInstanceRequest.getSearchBefore() != null
           || flowNodeInstanceRequest.getSearchBeforeOrEqual() != null) {
-        Collections.reverse(response.getChildren());
+        response.setChildren(List.copyOf(response.getChildren()).reversed());
       }
 
       return response;
     } catch (final IOException e) {
-      final String message =
+      final var message =
           String.format(
               "Exception occurred, while obtaining all flow node instances: %s", e.getMessage());
       throw new OperateRuntimeException(message, e);
     }
-  }
-
-  private AggregationBuilder getIncidentsAgg() {
-    return filter(AGG_INCIDENTS, termQuery(INCIDENT, true))
-        .subAggregation(terms(AGG_INCIDENT_PATHS).field(TREE_PATH).size(TERMS_AGG_SIZE));
-  }
-
-  private FlowNodeInstanceResponseDto scrollAllSearchHits(
-      final SearchRequest searchRequest, final String processInstanceId) throws IOException {
-    final Boolean[] runningParent = new Boolean[] {false};
-    final List<FlowNodeInstanceEntity> children =
-        tenantAwareClient.search(
-            searchRequest,
-            () -> {
-              return ElasticsearchUtil.scroll(
-                  searchRequest,
-                  FlowNodeInstanceEntity.class,
-                  objectMapper,
-                  esClient,
-                  getSearchHitFunction(null),
-                  null,
-                  getAggsProcessor(null, runningParent));
-            });
-    markHasIncident(processInstanceId, children);
-    return new FlowNodeInstanceResponseDto(
-        runningParent[0], FlowNodeInstanceDto.createFrom(children, objectMapper));
-  }
-
-  private Function<SearchHit, FlowNodeInstanceEntity> getSearchHitFunction(
-      final Set<String> incidentPaths) {
-    return (sh) -> {
-      final FlowNodeInstanceEntity entity =
-          fromSearchHit(sh.getSourceAsString(), objectMapper, FlowNodeInstanceEntity.class);
-      entity.setSortValues(sh.getSortValues());
-      if (incidentPaths != null && incidentPaths.contains(entity.getTreePath())) {
-        entity.setIncident(true);
-      }
-      return entity;
-    };
-  }
-
-  private FlowNodeInstanceResponseDto getOnePage(
-      final SearchRequest searchRequest, final String processInstanceId) throws IOException {
-    final SearchResponse searchResponse = tenantAwareClient.search(searchRequest);
-
-    final Boolean[] runningParent = new Boolean[1];
-    processAggregation(searchResponse.getAggregations(), null, runningParent);
-    final List<FlowNodeInstanceEntity> children =
-        ElasticsearchUtil.mapSearchHits(
-            searchResponse.getHits().getHits(), getSearchHitFunction(null));
-    markHasIncident(processInstanceId, children);
-    return new FlowNodeInstanceResponseDto(
-        runningParent[0], FlowNodeInstanceDto.createFrom(children, objectMapper));
   }
 
   private boolean flowNodeInstanceIsRunningOrIsNotMarked(
@@ -462,15 +415,10 @@ public class FlowNodeInstanceReader extends AbstractReader
     return flowNodeInstance.getEndDate() == null || !flowNodeInstance.isIncident();
   }
 
-  private QueryBuilder hasProcessInstanceAsTreePathPrefixAndIsIncident(final String treePath) {
-    return joinWithAnd(prefixQuery(TREE_PATH, treePath), termQuery(INCIDENT, true));
-  }
-
-  private FiltersAggregator.KeyedFilter newFilterForFlowNodeInstance(
-      final FlowNodeInstanceEntity flowNodeInstance) {
-    return new FiltersAggregator.KeyedFilter(
-        flowNodeInstance.getId(),
-        hasProcessInstanceAsTreePathPrefixAndIsIncident(flowNodeInstance.getTreePath()));
+  private Query hasProcessInstanceAsTreePathPrefixAndIsIncident(final String treePath) {
+    return joinWithAnd(
+        ElasticsearchUtil.prefixQuery(TREE_PATH, treePath),
+        ElasticsearchUtil.termsQuery(INCIDENT, true));
   }
 
   // Max size: page size of request - default: 50
@@ -479,32 +427,43 @@ public class FlowNodeInstanceReader extends AbstractReader
     if (flowNodeInstances == null || flowNodeInstances.isEmpty()) {
       return;
     }
-    final List<FiltersAggregator.KeyedFilter> filters =
+
+    final var filters =
         flowNodeInstances.stream()
             .filter(this::flowNodeInstanceIsRunningOrIsNotMarked)
-            .map(this::newFilterForFlowNodeInstance)
-            .toList();
+            .collect(
+                Collectors.toMap(
+                    FlowNodeInstanceEntity::getId,
+                    fni -> hasProcessInstanceAsTreePathPrefixAndIsIncident(fni.getTreePath())));
 
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(flowNodeInstanceTemplate)
-            .source(
-                new SearchSourceBuilder()
-                    .query(termQuery(PROCESS_INSTANCE_KEY, processInstanceId))
-                    .size(0)
-                    .aggregation(
-                        AggregationBuilders.filters(
-                            NUMBER_OF_INCIDENTS_FOR_TREE_PATH,
-                            filters.toArray(new FiltersAggregator.KeyedFilter[0]))));
+    if (filters.isEmpty()) {
+      return;
+    }
+
+    final var query = ElasticsearchUtil.termsQuery(PROCESS_INSTANCE_KEY, processInstanceId);
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
+
+    final var request =
+        new SearchRequest.Builder()
+            .index(whereToSearch(flowNodeInstanceTemplate, ALL))
+            .query(tenantAwareQuery)
+            .size(0)
+            .aggregations(
+                NUMBER_OF_INCIDENTS_FOR_TREE_PATH,
+                a -> a.filters(f -> f.filters(Buckets.of(b -> b.keyed(filters)))))
+            .build();
+
     try {
-      final Map<String, Long> flowNodeIdIncidents = new HashMap<>();
-      final SearchResponse response = tenantAwareClient.search(request);
-      final Filters filterBuckets =
-          response.getAggregations().get(NUMBER_OF_INCIDENTS_FOR_TREE_PATH);
+      final var response = es8client.search(request, FlowNodeInstanceEntity.class);
+      final var filterBuckets =
+          response.aggregations().get(NUMBER_OF_INCIDENTS_FOR_TREE_PATH).filters();
 
+      final Map<String, Long> flowNodeIdIncidents = new HashMap<>();
       filterBuckets
-          .getBuckets()
-          .forEach(b -> flowNodeIdIncidents.put(b.getKeyAsString(), b.getDocCount()));
-      // logger.info("FlowNodeInstance -> incidents: {}", flowNodeIdIncidents);
+          .buckets()
+          .keyed()
+          .forEach((key, bucket) -> flowNodeIdIncidents.put(key, bucket.docCount()));
+
       for (final var flowNodeInstance : flowNodeInstances) {
         final Long count = flowNodeIdIncidents.getOrDefault(flowNodeInstance.getId(), 0L);
         if (count > 0) {
@@ -516,65 +475,131 @@ public class FlowNodeInstanceReader extends AbstractReader
     }
   }
 
-  private Consumer<Aggregations> getAggsProcessor(
-      final Set<String> incidentPaths, final Boolean[] runningParent) {
-    return (aggs) -> {
-      if (incidentPaths != null) {
-        final Filter filterAggs = aggs.get(AGG_INCIDENTS);
-        if (filterAggs != null) {
-          final Terms termsAggs = filterAggs.getAggregations().get(AGG_INCIDENT_PATHS);
-          if (termsAggs != null) {
-            incidentPaths.addAll(
-                termsAggs.getBuckets().stream()
-                    .map((b) -> b.getKeyAsString())
-                    .collect(Collectors.toSet()));
-          }
-        }
-      }
-      final Filter filterAggs = aggs.get(AGG_RUNNING_PARENT);
-      if (filterAggs != null && filterAggs.getDocCount() > 0) {
-        runningParent[0] = true;
-      }
-    };
-  }
-
-  private Set<String> processAggregation(
-      final Aggregations aggregations,
-      final Set<String> incidentPaths,
-      final Boolean[] runningParent) {
-    getAggsProcessor(incidentPaths, runningParent).accept(aggregations);
-    return incidentPaths;
-  }
-
-  /**
-   * In case of searchAfterOrEqual and searchBeforeOrEqual, this method will ignore "orEqual" part.
-   *
-   * @param searchSourceBuilder
-   * @param request
-   */
   private void applySorting(
-      final SearchSourceBuilder searchSourceBuilder, final FlowNodeInstanceQueryDto request) {
+      final SearchRequest.Builder searchRequestBuilder, final FlowNodeInstanceQueryDto request) {
 
-    final boolean directSorting =
+    final var directSorting =
         request.getSearchAfter() != null
             || request.getSearchAfterOrEqual() != null
             || (request.getSearchBefore() == null && request.getSearchBeforeOrEqual() == null);
 
     if (directSorting) { // this sorting is also the default one for 1st page
-      searchSourceBuilder.sort(START_DATE, SortOrder.ASC).sort(ID, SortOrder.ASC);
+      searchRequestBuilder
+          .sort(ElasticsearchUtil.sortOrder(START_DATE, SortOrder.Asc))
+          .sort(ElasticsearchUtil.sortOrder(ID, SortOrder.Asc));
       if (request.getSearchAfter() != null) {
-        searchSourceBuilder.searchAfter(request.getSearchAfter(objectMapper));
+        searchRequestBuilder.searchAfter(
+            searchAfterToFieldValues(request.getSearchAfter(objectMapper)));
       } else if (request.getSearchAfterOrEqual() != null) {
-        searchSourceBuilder.searchAfter(request.getSearchAfterOrEqual(objectMapper));
+        searchRequestBuilder.searchAfter(
+            searchAfterToFieldValues(request.getSearchAfterOrEqual(objectMapper)));
       }
     } else { // searchBefore != null
       // reverse sorting
-      searchSourceBuilder.sort(START_DATE, SortOrder.DESC).sort(ID, SortOrder.DESC);
+      searchRequestBuilder
+          .sort(ElasticsearchUtil.sortOrder(START_DATE, SortOrder.Desc))
+          .sort(ElasticsearchUtil.sortOrder(ID, SortOrder.Desc));
       if (request.getSearchBefore() != null) {
-        searchSourceBuilder.searchAfter(request.getSearchBefore(objectMapper));
+        searchRequestBuilder.searchAfter(
+            searchAfterToFieldValues(request.getSearchBefore(objectMapper)));
       } else if (request.getSearchBeforeOrEqual() != null) {
-        searchSourceBuilder.searchAfter(request.getSearchBeforeOrEqual(objectMapper));
+        searchRequestBuilder.searchAfter(
+            searchAfterToFieldValues(request.getSearchBeforeOrEqual(objectMapper)));
       }
+    }
+  }
+
+  private FlowNodeInstanceResponseDto scrollAllSearchHits(
+      final SearchRequest.Builder searchRequestBuilder, final String processInstanceId)
+      throws IOException {
+    final var runningParent = new AtomicBoolean();
+    final List<FlowNodeInstanceEntity> children =
+        ElasticsearchUtil.scrollAllStream(
+                es8client, searchRequestBuilder, FlowNodeInstanceEntity.class)
+            .flatMap(
+                response -> {
+                  processAggregation(response.aggregations(), null, runningParent);
+                  return response.hits().hits().stream();
+                })
+            .map(
+                hit -> {
+                  final var entity = hit.source();
+                  entity.setSortValues(hit.sort().stream().map(FieldValue::_get).toArray());
+                  return entity;
+                })
+            .toList();
+    markHasIncident(processInstanceId, children);
+    return new FlowNodeInstanceResponseDto(
+        runningParent.get(), FlowNodeInstanceDto.createFrom(children, objectMapper));
+  }
+
+  private FlowNodeInstanceResponseDto getOnePage(
+      final SearchRequest searchRequest, final String processInstanceId) throws IOException {
+    final var searchResponse = es8client.search(searchRequest, FlowNodeInstanceEntity.class);
+
+    final var runningParent = new AtomicBoolean();
+    final Set<String> incidentPaths = new HashSet<>();
+    processAggregation(searchResponse.aggregations(), incidentPaths, runningParent);
+
+    final List<FlowNodeInstanceEntity> children =
+        searchResponse.hits().hits().stream()
+            .map(
+                hit -> {
+                  final var entity = hit.source();
+                  entity.setSortValues(hit.sort().stream().map(FieldValue::_get).toArray());
+                  return entity;
+                })
+            .toList();
+    // Additional incident marking via separate query
+    markHasIncident(processInstanceId, children);
+    return new FlowNodeInstanceResponseDto(
+        runningParent.get(), FlowNodeInstanceDto.createFrom(children, objectMapper));
+  }
+
+  private void processAggregation(
+      final Map<String, Aggregate> aggregations,
+      final Set<String> incidentPaths,
+      final AtomicBoolean runningParent) {
+    if (aggregations == null) {
+      return;
+    }
+
+    processIncidentPathsAggregation(aggregations, incidentPaths);
+    processRunningParentAggregation(aggregations, runningParent);
+  }
+
+  private void processIncidentPathsAggregation(
+      final Map<String, Aggregate> aggregations, final Set<String> incidentPaths) {
+    if (incidentPaths == null) {
+      return;
+    }
+
+    final var incidentsAgg = aggregations.get(AGG_INCIDENTS);
+    if (incidentsAgg == null || !incidentsAgg.isFilter()) {
+      return;
+    }
+
+    final var subAggs = incidentsAgg.filter().aggregations();
+    if (subAggs == null) {
+      return;
+    }
+
+    final var termsAgg = subAggs.get(AGG_INCIDENT_PATHS);
+    if (termsAgg != null && termsAgg.isSterms()) {
+      incidentPaths.addAll(
+          termsAgg.sterms().buckets().array().stream()
+              .map(b -> b.key().stringValue())
+              .collect(Collectors.toSet()));
+    }
+  }
+
+  private void processRunningParentAggregation(
+      final Map<String, Aggregate> aggregations, final AtomicBoolean runningParent) {
+    final var runningParentAgg = aggregations.get(AGG_RUNNING_PARENT);
+    if (runningParentAgg != null
+        && runningParentAgg.isFilter()
+        && runningParentAgg.filter().docCount() > 0) {
+      runningParent.set(true);
     }
   }
 
@@ -618,22 +643,26 @@ public class FlowNodeInstanceReader extends AbstractReader
             .appendFlowNode(flowNodeId)
             .appendFlowNodeInstance(flowNodeInstanceId)
             .toString();
-    final QueryBuilder query =
-        constantScoreQuery(
+
+    final var query =
+        ElasticsearchUtil.constantScoreQuery(
             joinWithAnd(
-                termQuery(IncidentTemplate.TREE_PATH, incidentTreePath), ACTIVE_INCIDENT_QUERY));
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(incidentTemplate, QueryType.ONLY_RUNTIME)
-            .source(new SearchSourceBuilder().query(query));
+                ElasticsearchUtil.termsQuery(IncidentTemplate.TREE_PATH, incidentTreePath),
+                ACTIVE_INCIDENT_QUERY_ES8));
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
+
+    final var request =
+        new SearchRequest.Builder()
+            .index(whereToSearch(incidentTemplate, ONLY_RUNTIME))
+            .query(tenantAwareQuery)
+            .build();
+
     try {
-      final SearchResponse response = tenantAwareClient.search(request);
-      flowNodeMetadata.setIncidentCount(response.getHits().getTotalHits().value);
-      if (response.getHits().getTotalHits().value == 1) {
-        final IncidentEntity incidentEntity =
-            fromSearchHit(
-                response.getHits().getAt(0).getSourceAsString(),
-                objectMapper,
-                IncidentEntity.class);
+      final var response = es8client.search(request, IncidentEntity.class);
+      flowNodeMetadata.setIncidentCount(response.hits().total().value());
+
+      if (response.hits().total().value() == 1) {
+        final var incidentEntity = response.hits().hits().get(0).source();
         final Map<String, IncidentDataHolder> incData =
             incidentReader.collectFlowNodeDataForPropagatedIncidents(
                 List.of(incidentEntity), processInstanceId, treePath);
@@ -671,23 +700,25 @@ public class FlowNodeInstanceReader extends AbstractReader
     final String flowNodeInstancesTreePath =
         new TreePath(treePath).appendFlowNode(flowNodeId).toString();
 
-    final QueryBuilder query =
-        constantScoreQuery(
+    final var query =
+        ElasticsearchUtil.constantScoreQuery(
             joinWithAnd(
-                termQuery(IncidentTemplate.TREE_PATH, flowNodeInstancesTreePath),
-                ACTIVE_INCIDENT_QUERY));
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(incidentTemplate, QueryType.ONLY_RUNTIME)
-            .source(new SearchSourceBuilder().query(query));
+                ElasticsearchUtil.termsQuery(IncidentTemplate.TREE_PATH, flowNodeInstancesTreePath),
+                ACTIVE_INCIDENT_QUERY_ES8));
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
+
+    final var request =
+        new SearchRequest.Builder()
+            .index(whereToSearch(incidentTemplate, ONLY_RUNTIME))
+            .query(tenantAwareQuery)
+            .build();
+
     try {
-      final SearchResponse response = tenantAwareClient.search(request);
-      flowNodeMetadata.setIncidentCount(response.getHits().getTotalHits().value);
-      if (response.getHits().getTotalHits().value == 1) {
-        final IncidentEntity incidentEntity =
-            fromSearchHit(
-                response.getHits().getAt(0).getSourceAsString(),
-                objectMapper,
-                IncidentEntity.class);
+      final var response = es8client.search(request, IncidentEntity.class);
+      flowNodeMetadata.setIncidentCount(response.hits().total().value());
+
+      if (response.hits().total().value() == 1) {
+        final var incidentEntity = response.hits().hits().get(0).source();
         final Map<String, IncidentDataHolder> incData =
             incidentReader.collectFlowNodeDataForPropagatedIncidents(
                 List.of(incidentEntity), processInstanceId, treePath);
@@ -715,29 +746,35 @@ public class FlowNodeInstanceReader extends AbstractReader
   }
 
   private DecisionInstanceReferenceDto findRootCauseDecision(final Long flowNodeInstanceKey) {
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(decisionInstanceTemplate)
-            .source(
-                new SearchSourceBuilder()
-                    .query(
-                        joinWithAnd(
-                            termQuery(ELEMENT_INSTANCE_KEY, flowNodeInstanceKey),
-                            termQuery(
-                                DecisionInstanceTemplate.STATE, DecisionInstanceState.FAILED)))
-                    .sort(EVALUATION_DATE, SortOrder.DESC)
-                    .size(1)
-                    .fetchSource(new String[] {DECISION_NAME, DECISION_ID}, null));
     try {
-      final SearchResponse response = tenantAwareClient.search(request);
-      if (response.getHits().getTotalHits().value > 0) {
-        final Map<String, Object> source = response.getHits().getHits()[0].getSourceAsMap();
-        String decisionName = (String) source.get(DECISION_NAME);
+      final var query =
+          joinWithAnd(
+              ElasticsearchUtil.termsQuery(ELEMENT_INSTANCE_KEY, flowNodeInstanceKey),
+              ElasticsearchUtil.termsQuery(
+                  DecisionInstanceTemplate.STATE, DecisionInstanceState.FAILED));
+      final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
+
+      final var request =
+          new SearchRequest.Builder()
+              .index(whereToSearch(decisionInstanceTemplate, ALL))
+              .query(tenantAwareQuery)
+              .sort(ElasticsearchUtil.sortOrder(EVALUATION_DATE, SortOrder.Desc))
+              .size(1)
+              .source(s -> s.filter(f -> f.includes(DECISION_NAME, DECISION_ID)))
+              .build();
+
+      final var response = es8client.search(request, DecisionInstanceEntity.class);
+
+      if (response.hits().total().value() > 0) {
+        final var hit = response.hits().hits().get(0);
+        final var source = hit.source();
+        String decisionName = source.getDecisionName();
         if (decisionName == null) {
-          decisionName = (String) source.get(DECISION_ID);
+          decisionName = source.getDecisionId();
         }
         return new DecisionInstanceReferenceDto()
             .setDecisionName(decisionName)
-            .setInstanceId(response.getHits().getHits()[0].getId());
+            .setInstanceId(hit.id());
       }
     } catch (final IOException e) {
       final String message =
@@ -750,15 +787,26 @@ public class FlowNodeInstanceReader extends AbstractReader
   }
 
   private FlowNodeInstanceEntity getFlowNodeInstanceEntity(final String flowNodeInstanceId) {
-    final FlowNodeInstanceEntity flowNodeInstance;
-    final TermQueryBuilder flowNodeInstanceIdQ = termQuery(ID, flowNodeInstanceId);
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(flowNodeInstanceTemplate)
-            .source(new SearchSourceBuilder().query(constantScoreQuery(flowNodeInstanceIdQ)));
-    final SearchResponse response;
     try {
-      response = tenantAwareClient.search(request);
-      flowNodeInstance = getFlowNodeInstance(response);
+      final var query =
+          ElasticsearchUtil.constantScoreQuery(
+              ElasticsearchUtil.termsQuery(ID, flowNodeInstanceId));
+      final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
+
+      final var request =
+          new SearchRequest.Builder()
+              .index(whereToSearch(flowNodeInstanceTemplate, ALL))
+              .query(tenantAwareQuery)
+              .size(1)
+              .build();
+
+      final var response = es8client.search(request, FlowNodeInstanceEntity.class);
+
+      if (response.hits().total().value() == 0) {
+        throw new OperateRuntimeException("No data found for flow node instance.");
+      }
+
+      return response.hits().hits().get(0).source();
     } catch (final IOException e) {
       final String message =
           String.format(
@@ -766,7 +814,6 @@ public class FlowNodeInstanceReader extends AbstractReader
               e.getMessage());
       throw new OperateRuntimeException(message, e);
     }
-    return flowNodeInstance;
   }
 
   private List<FlowNodeInstanceBreadcrumbEntryDto> buildBreadcrumb(
@@ -779,25 +826,31 @@ public class FlowNodeInstanceReader extends AbstractReader
     final String prefixTreePath =
         lastSeparatorIndex > -1 ? treePath.substring(0, lastSeparatorIndex) : treePath;
 
-    final QueryBuilder query =
-        joinWithAnd(
-            termQuery(FLOW_NODE_ID, flowNodeId),
-            prefixQuery(TREE_PATH, prefixTreePath),
-            rangeQuery(LEVEL).lte(level));
+    final var query =
+        ElasticsearchUtil.constantScoreQuery(
+            joinWithAnd(
+                ElasticsearchUtil.termsQuery(FLOW_NODE_ID, flowNodeId),
+                ElasticsearchUtil.prefixQuery(TREE_PATH, prefixTreePath),
+                Query.of(q -> q.range(r -> r.number(n -> n.field(LEVEL).lte((double) level))))));
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
 
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(flowNodeInstanceTemplate)
-            .source(
-                new SearchSourceBuilder()
-                    .query(constantScoreQuery(query))
-                    .fetchSource(false)
-                    .size(0)
-                    .aggregation(getLevelsAggs()));
+    final var request =
+        new SearchRequest.Builder()
+            .index(whereToSearch(flowNodeInstanceTemplate, ALL))
+            .query(tenantAwareQuery)
+            .source(s -> s.fetch(false))
+            .size(0)
+            .aggregations(LEVELS_AGG_NAME, getLevelsAggs())
+            .build();
+
     try {
-      final SearchResponse response = tenantAwareClient.search(request);
+      final var response = es8client.search(request, FlowNodeInstanceEntity.class);
 
-      final Terms levelsAgg = response.getAggregations().get(LEVELS_AGG_NAME);
-      result.addAll(buildBreadcrumbForFlowNodeId(levelsAgg.getBuckets(), level));
+      final var levelsAggResult = response.aggregations().get(LEVELS_AGG_NAME);
+      if (levelsAggResult != null && levelsAggResult.isLterms()) {
+        result.addAll(
+            buildBreadcrumbForFlowNodeId(levelsAggResult.lterms().buckets().array(), level));
+      }
 
       return result;
     } catch (final IOException e) {
@@ -811,56 +864,67 @@ public class FlowNodeInstanceReader extends AbstractReader
   private FlowNodeMetadataDto getMetadataByFlowNodeId(
       final String processInstanceId, final String flowNodeId, final FlowNodeType flowNodeType) {
 
-    final TermQueryBuilder processInstanceIdQ = termQuery(PROCESS_INSTANCE_KEY, processInstanceId);
-    final TermQueryBuilder flowNodeIdQ = termQuery(FLOW_NODE_ID, flowNodeId);
+    final var query =
+        ElasticsearchUtil.constantScoreQuery(
+            joinWithAnd(
+                ElasticsearchUtil.termsQuery(PROCESS_INSTANCE_KEY, processInstanceId),
+                ElasticsearchUtil.termsQuery(FLOW_NODE_ID, flowNodeId)));
+    final var tenantAwareQuery = tenantHelper.makeQueryTenantAware(query);
 
-    final SearchSourceBuilder sourceBuilder =
-        new SearchSourceBuilder()
-            .query(constantScoreQuery(joinWithAnd(processInstanceIdQ, flowNodeIdQ)))
-            .sort(LEVEL, SortOrder.ASC)
-            .aggregation(getLevelsAggs())
+    final var requestBuilder =
+        new SearchRequest.Builder()
+            .index(whereToSearch(flowNodeInstanceTemplate, ALL))
+            .query(tenantAwareQuery)
+            .sort(ElasticsearchUtil.sortOrder(LEVEL, SortOrder.Asc))
+            .aggregations(LEVELS_AGG_NAME, getLevelsAggs())
             .size(1);
+
     if (flowNodeType != null) {
-      sourceBuilder.postFilter(termQuery(TYPE, flowNodeType));
+      requestBuilder.postFilter(ElasticsearchUtil.termsQuery(TYPE, flowNodeType));
     }
-    final SearchRequest request =
-        ElasticsearchUtil.createSearchRequest(flowNodeInstanceTemplate).source(sourceBuilder);
+
+    final var request = requestBuilder.build();
 
     try {
-      final SearchResponse response = tenantAwareClient.search(request);
+      final var response = es8client.search(request, FlowNodeInstanceEntity.class);
 
       final FlowNodeMetadataDto result = new FlowNodeMetadataDto();
-      final FlowNodeInstanceEntity flowNodeInstance = getFlowNodeInstance(response);
 
-      final Terms levelsAgg = response.getAggregations().get(LEVELS_AGG_NAME);
-      if (levelsAgg != null
-          && levelsAgg.getBuckets() != null
-          && levelsAgg.getBuckets().size() > 0) {
-        final Bucket bucketCurrentLevel =
-            getBucketFromLevel(levelsAgg.getBuckets(), flowNodeInstance.getLevel());
-        if (bucketCurrentLevel.getDocCount() == 1) {
-          result.setInstanceMetadata(buildInstanceMetadata(flowNodeInstance));
-          result.setFlowNodeInstanceId(flowNodeInstance.getId());
-          // scenario 1-2
-          result.setBreadcrumb(
-              buildBreadcrumbForFlowNodeId(levelsAgg.getBuckets(), flowNodeInstance.getLevel()));
-          // find incidents information
-          searchForIncidents(
-              result,
-              String.valueOf(flowNodeInstance.getProcessInstanceKey()),
-              flowNodeInstance.getFlowNodeId(),
-              flowNodeInstance.getId(),
-              flowNodeInstance.getType());
-        } else {
-          result.setInstanceCount(bucketCurrentLevel.getDocCount());
-          result.setFlowNodeId(flowNodeInstance.getFlowNodeId());
-          result.setFlowNodeType(flowNodeInstance.getType());
-          // find incidents information
-          searchForIncidentsByFlowNodeIdAndType(
-              result,
-              String.valueOf(flowNodeInstance.getProcessInstanceKey()),
-              flowNodeInstance.getFlowNodeId(),
-              flowNodeInstance.getType());
+      if (response.hits().total().value() == 0) {
+        throw new OperateRuntimeException("No data found for flow node instance.");
+      }
+
+      final var flowNodeInstance = response.hits().hits().get(0).source();
+
+      final var levelsAggResult = response.aggregations().get(LEVELS_AGG_NAME);
+      if (levelsAggResult != null && levelsAggResult.isLterms()) {
+        final var buckets = levelsAggResult.lterms().buckets().array();
+        if (!buckets.isEmpty()) {
+          final var bucketCurrentLevel = getBucketFromLevel(buckets, flowNodeInstance.getLevel());
+          if (bucketCurrentLevel.docCount() == 1) {
+            result.setInstanceMetadata(buildInstanceMetadata(flowNodeInstance));
+            result.setFlowNodeInstanceId(flowNodeInstance.getId());
+            // scenario 1-2
+            result.setBreadcrumb(
+                buildBreadcrumbForFlowNodeId(buckets, flowNodeInstance.getLevel()));
+            // find incidents information
+            searchForIncidents(
+                result,
+                String.valueOf(flowNodeInstance.getProcessInstanceKey()),
+                flowNodeInstance.getFlowNodeId(),
+                flowNodeInstance.getId(),
+                flowNodeInstance.getType());
+          } else {
+            result.setInstanceCount(bucketCurrentLevel.docCount());
+            result.setFlowNodeId(flowNodeInstance.getFlowNodeId());
+            result.setFlowNodeType(flowNodeInstance.getType());
+            // find incidents information
+            searchForIncidentsByFlowNodeIdAndType(
+                result,
+                String.valueOf(flowNodeInstance.getProcessInstanceKey()),
+                flowNodeInstance.getFlowNodeId(),
+                flowNodeInstance.getType());
+          }
         }
       }
 
@@ -873,63 +937,15 @@ public class FlowNodeInstanceReader extends AbstractReader
     }
   }
 
-  private Bucket getBucketFromLevel(final List<? extends Bucket> buckets, final int level) {
-    return buckets.stream().filter(b -> b.getKeyAsNumber().intValue() == level).findFirst().get();
-  }
-
-  private TermsAggregationBuilder getLevelsAggs() {
-    return terms(LEVELS_AGG_NAME)
-        .field(LEVEL)
-        .size(TERMS_AGG_SIZE)
-        .order(BucketOrder.key(true)) // upper level first
-        .subAggregation(
-            topHits(LEVELS_TOP_HITS_AGG_NAME) // select one instance per each level
-                .size(1));
-  }
-
-  private FlowNodeInstanceEntity getFlowNodeInstance(final SearchResponse response) {
-    if (response.getHits().getTotalHits().value == 0) {
-      throw new OperateRuntimeException("No data found for flow node instance.");
-    }
-    return fromSearchHit(
-        response.getHits().getAt(0).getSourceAsString(),
-        objectMapper,
-        FlowNodeInstanceEntity.class);
-  }
-
-  private List<FlowNodeInstanceBreadcrumbEntryDto> buildBreadcrumbForFlowNodeId(
-      final List<? extends Bucket> buckets, final int currentInstanceLevel) {
-    if (buckets.size() == 0) {
-      return new ArrayList<>();
-    }
-    final List<FlowNodeInstanceBreadcrumbEntryDto> breadcrumb = new ArrayList<>();
-    final FlowNodeType firstBucketFlowNodeType = getFirstBucketFlowNodeType(buckets);
-    if ((firstBucketFlowNodeType != null
-            && firstBucketFlowNodeType.equals(FlowNodeType.MULTI_INSTANCE_BODY))
-        || getBucketFromLevel(buckets, currentInstanceLevel).getDocCount() > 1) {
-      for (final Bucket levelBucket : buckets) {
-        final TopHits levelTopHits = levelBucket.getAggregations().get(LEVELS_TOP_HITS_AGG_NAME);
-        final Map<String, Object> instanceFields = levelTopHits.getHits().getAt(0).getSourceAsMap();
-        if ((int) instanceFields.get(LEVEL) <= currentInstanceLevel) {
-          breadcrumb.add(
-              new FlowNodeInstanceBreadcrumbEntryDto(
-                  (String) instanceFields.get(FLOW_NODE_ID),
-                  FlowNodeType.valueOf((String) instanceFields.get(TYPE))));
-        }
-      }
-    }
-    return breadcrumb;
-  }
-
-  private FlowNodeType getFirstBucketFlowNodeType(final List<? extends Bucket> buckets) {
-    final TopHits topHits = buckets.get(0).getAggregations().get(LEVELS_TOP_HITS_AGG_NAME);
-    if (topHits != null && topHits.getHits().getTotalHits().value > 0) {
-      final String type = (String) topHits.getHits().getAt(0).getSourceAsMap().get(TYPE);
-      if (type != null) {
-        return FlowNodeType.valueOf(type);
-      }
-    }
-    return null;
+  private Aggregation getLevelsAggs() {
+    return Aggregation.of(
+        a ->
+            a.terms(
+                    t ->
+                        t.field(LEVEL)
+                            .size(TERMS_AGG_SIZE)
+                            .order(NamedValue.of("_key", SortOrder.Asc)))
+                .aggregations(LEVELS_TOP_HITS_AGG_NAME, sub -> sub.topHits(th -> th.size(1))));
   }
 
   private FlowNodeInstanceMetadata buildInstanceMetadata(
@@ -937,16 +953,141 @@ public class FlowNodeInstanceReader extends AbstractReader
     return flowNodeInstanceMetadataBuilder.buildFrom(flowNodeInstance);
   }
 
-  private Set<String> collectFinishedFlowNodes(final Filter finishedFlowNodes) {
+  private Set<String> collectFinishedFlowNodes(final Aggregate finishedFlowNodes) {
     final Set<String> result = new HashSet<>();
-    final List<? extends Bucket> buckets =
-        ((Terms) finishedFlowNodes.getAggregations().get(FINISHED_FLOW_NODES_BUCKETS_AGG_NAME))
-            .getBuckets();
-    if (buckets != null) {
-      for (final Bucket bucket : buckets) {
-        result.add(bucket.getKeyAsString());
+    if (finishedFlowNodes != null && finishedFlowNodes.isFilter()) {
+      final var subAggs = finishedFlowNodes.filter().aggregations();
+      if (subAggs != null) {
+        final var termsAgg = subAggs.get(FINISHED_FLOW_NODES_BUCKETS_AGG_NAME);
+        if (termsAgg != null && termsAgg.isSterms()) {
+          for (final var bucket : termsAgg.sterms().buckets().array()) {
+            result.add(bucket.key().stringValue());
+          }
+        }
       }
     }
     return result;
+  }
+
+  private void collectActiveFlowNodeStates(
+      final Aggregate activeFlowNodesAgg,
+      final Set<String> incidentPaths,
+      final Map<String, FlowNodeStateDto> result) {
+    if (activeFlowNodesAgg == null || !activeFlowNodesAgg.isFilter()) {
+      return;
+    }
+
+    final var subAggs = activeFlowNodesAgg.filter().aggregations();
+    if (subAggs == null) {
+      return;
+    }
+
+    final var flowNodesAgg = subAggs.get(ACTIVE_FLOW_NODES_BUCKETS_AGG_NAME);
+    if (flowNodesAgg == null || !flowNodesAgg.isSterms()) {
+      return;
+    }
+
+    for (final var flowNode : flowNodesAgg.sterms().buckets().array()) {
+      processFlowNodeBucket(flowNode, incidentPaths, result);
+    }
+  }
+
+  private void processFlowNodeBucket(
+      final StringTermsBucket flowNode,
+      final Set<String> incidentPaths,
+      final Map<String, FlowNodeStateDto> result) {
+    final var latestFlowNodeAgg = flowNode.aggregations().get(LATEST_FLOW_NODE_AGG_NAME);
+    if (latestFlowNodeAgg == null || !latestFlowNodeAgg.isTopHits()) {
+      return;
+    }
+
+    final var topHits = latestFlowNodeAgg.topHits();
+    if (topHits.hits().hits().isEmpty()) {
+      return;
+    }
+
+    final var hit = topHits.hits().hits().get(0);
+    if (hit.source() == null) {
+      return;
+    }
+
+    // Deserialize JsonData to Map
+    final Map<String, Object> lastFlowNodeFields =
+        objectMapper.convertValue(hit.source(), ElasticsearchUtil.MAP_CLASS);
+
+    final var stateValue =
+        Objects.requireNonNull(lastFlowNodeFields.get(STATE), "STATE field must not be null");
+    final var treePathValue = lastFlowNodeFields.get(TREE_PATH);
+
+    var flowNodeState = FlowNodeStateDto.valueOf(stateValue.toString());
+
+    if (flowNodeState.equals(FlowNodeStateDto.ACTIVE)
+        && treePathValue != null
+        && incidentPaths.contains(treePathValue.toString())) {
+      flowNodeState = FlowNodeStateDto.INCIDENT;
+    }
+
+    result.put(flowNode.key().stringValue(), flowNodeState);
+  }
+
+  private LongTermsBucket getBucketFromLevel(final List<LongTermsBucket> buckets, final int level) {
+    return buckets.stream()
+        .filter(b -> b.key() == level)
+        .findFirst()
+        .orElseThrow(
+            () ->
+                new OperateRuntimeException(
+                    "No aggregation bucket found for level "
+                        + level
+                        + " when building breadcrumb"));
+  }
+
+  private List<FlowNodeInstanceBreadcrumbEntryDto> buildBreadcrumbForFlowNodeId(
+      final List<LongTermsBucket> buckets, final int currentInstanceLevel) {
+    if (buckets.isEmpty()) {
+      return new ArrayList<>();
+    }
+    final List<FlowNodeInstanceBreadcrumbEntryDto> breadcrumb = new ArrayList<>();
+    final FlowNodeType firstBucketFlowNodeType = getFirstBucketFlowNodeType(buckets);
+    if ((firstBucketFlowNodeType != null
+            && firstBucketFlowNodeType.equals(FlowNodeType.MULTI_INSTANCE_BODY))
+        || getBucketFromLevel(buckets, currentInstanceLevel).docCount() > 1) {
+      for (final var levelBucket : buckets) {
+        final var levelTopHits = levelBucket.aggregations().get(LEVELS_TOP_HITS_AGG_NAME).topHits();
+        final var hit = levelTopHits.hits().hits().get(0);
+        final Map<String, Object> instanceFields =
+            objectMapper.convertValue(hit.source(), ElasticsearchUtil.MAP_CLASS);
+        if ((int) instanceFields.get(LEVEL) <= currentInstanceLevel) {
+          final var flowNodeType = FlowNodeType.valueOf((String) instanceFields.get(TYPE));
+          final var breadcrumbEntry =
+              new FlowNodeInstanceBreadcrumbEntryDto(
+                  String.valueOf(instanceFields.get(FLOW_NODE_ID)), flowNodeType);
+          breadcrumb.add(breadcrumbEntry);
+        }
+      }
+    }
+    return breadcrumb;
+  }
+
+  private FlowNodeType getFirstBucketFlowNodeType(final List<LongTermsBucket> buckets) {
+    if (buckets.isEmpty()) {
+      return null;
+    }
+
+    final var topHitsAgg = buckets.get(0).aggregations().get(LEVELS_TOP_HITS_AGG_NAME);
+    if (topHitsAgg == null || !topHitsAgg.isTopHits()) {
+      return null;
+    }
+
+    final var hits = topHitsAgg.topHits().hits().hits();
+    if (hits.isEmpty() || hits.get(0).source() == null) {
+      return null;
+    }
+
+    final Map<String, Object> instanceFields =
+        objectMapper.convertValue(hits.get(0).source(), ElasticsearchUtil.MAP_CLASS);
+    final var typeValue = (String) instanceFields.get(TYPE);
+
+    return typeValue == null ? null : FlowNodeType.valueOf(typeValue);
   }
 }
